history slider ie overflow fixes

--- a/styles/sass/pages/show.scss
+++ b/styles/sass/pages/show.scss
@@ -121,7 +121,7 @@
 
     .image {
       width: 100%;
-      right: -33.33%;//-12.5vw; // horizontal vws are problematic in ie 10 -> so have to use % where possible
+      right: -16.665%;//-12.5vw; // horizontal vws are problematic in ie 10 -> so have to use % where possible
     }
   }// .slider-images
 
