--- a/styles/style.css
+++ b/styles/style.css
@@ -3964,7 +3964,7 @@ input {
     height: 37.5vw; }
     .history-slider .slider-images .image {
       width: 100%;
-      right: -33.33%; }
+      right: -16.665%; }
   .history-slider .slider-ui .slider-label.onlymobile {
     -webkit-transform: none;
     -moz-transform: none;
